--- a/src/content/docs/reference/compiler-warnings.mdx
+++ b/src/content/docs/reference/compiler-warnings.mdx
@@ -104,7 +104,7 @@ Visible, non-interactive elements with a click event must be accompanied by a ke
 ### a11y_consider_explicit_label
 
 ```
-Buttons and links should either contain text or have an `aria-label` or `aria-labelledby` attribute
+Buttons and links should either contain text or have an `aria-label`, `aria-labelledby` or `title` attribute
 ```
 
 ### a11y_distracting_elements
