--- a/src/content/docs/misc/testing.mdx
+++ b/src/content/docs/misc/testing.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 Тестирование помогает вам писать и поддерживать ваш код, а также защищает от регрессий. Тестовые фреймворки помогают вам в этом, позволяя описывать утверждения или ожидания о том, как должен вести себя ваш код. Svelte не навязывает вам использование конкретного тестового фреймворка — вы можете писать модульные тесты, интеграционные тесты и тесты сквозного взаимодействия, используя такие решения, как [Vitest](https://vitest.dev/), [Jasmine](https://jasmine.github.io/), [Cypress](https://www.cypress.io/) и [Playwright](https://playwright.dev/).
 
-## Модульное и интеграционное тестирование с использованием Vitest
+## Юнит-тесты и тесты компонентов с Vitest
 
 Модульные тесты позволяют вам тестировать небольшие изолированные части вашего кода. Интеграционные тесты позволяют вам тестировать части вашего приложения, чтобы увидеть, работают ли они вместе. Если вы используете Vite (в том числе через SvelteKit), мы рекомендуем использовать [Vitest](https://vitest.dev/).
 
@@ -307,7 +307,7 @@ test('Component', async () => {
 
 При написании тестов компонентов, которые включают двусторонние привязки, контекст или свойства сниппетов, лучше создать обёртку для вашего конкретного теста и взаимодействовать с ней. `@testing-library/svelte` содержит некоторые [примеры](https://testing-library.com/docs/svelte-testing-library/example).
 
-### Тестирование компонентов с помощью Storybook
+### Тесты компонентов со Storybook
 
 [Storybook](https://storybook.js.org) — это инструмент для разработки и документирования UI-компонентов, который также можно использовать для тестирования ваших компонентов. Они запускаются в браузерном режиме Vitest, который отображает ваши компоненты в реальном браузере для создания максимально приближенной к реальности среды тестирования.
 
@@ -348,7 +348,7 @@ test('Component', async () => {
 />
 ```
 
-## E2E тесты с использованием Playwright
+## Сквозные тесты с Playwright
 
 E2E (сокращение от «end to end») тесты позволяют вам тестировать ваше приложение целиком, с точки зрения пользователя. В этом разделе используется [Playwright](https://playwright.dev/) в качестве примера, но вы также можете использовать другие решения, такие как [Cypress](https://www.cypress.io/) или [NightwatchJS](https://nightwatchjs.org/).
 
