--- a/src/content/docs/runes/state.mdx
+++ b/src/content/docs/runes/state.mdx
@@ -166,6 +166,21 @@ person = {
 
 Это удобно, когда вы хотите передать состояние во внешнюю библиотеку или API, которые не ожидают прокси, такие как `structuredClone`.
 
+## `$state.eager`
+
+Когда состояние изменяется, это изменение может не сразу отразиться в интерфейсе, если оно используется в выражении `await`, потому что [обновления синхронизируются](/template-syntax/await-expressions/#синхронизированные-обновления).
+
+В некоторых случаях может потребоваться обновить интерфейс сразу после изменения состояния. Например, вы можете захотеть обновить панель навигации, когда пользователь кликает по ссылке, чтобы он получил визуальный отклик во время загрузки новой страницы. Для этого используйте `$state.eager(value)`:
+
+```svelte
+<nav>
+  <a href="/" aria-current={$state.eager(pathname) === '/' ? 'page' : null}>Главная</a>
+  <a href="/about" aria-current={$state.eager(pathname) === '/about' ? 'page' : null}>О сайте</a>
+</nav>
+```
+
+Используйте эту функцию умеренно и только для предоставления отклика на действия пользователя — в целом, если позволить Svelte самостоятельно координировать обновления, это обеспечит более качественный пользовательский опыт.
+
 ## Передача состояния в функции
 
 JavaScript — это язык с _передачей по значению_ — когда вы вызываете функцию, аргументы являются _значениями_, а не _переменными_. Другими словами:
