--- a/src/content/docs/reference/runtime-errors.mdx
+++ b/src/content/docs/reference/runtime-errors.mdx
@@ -135,6 +135,12 @@ $effect(() => {
 
 Часто при возникновении этой проблемы значение, о котором идет речь, не должно быть состоянием (например, если вы добавляете элементы в массив `logs` в эффекте, сделайте `logs` обычным массивом, а не `$state([])`). В редких случаях, когда вам действительно _нужно_ записывать в состояние в эффекте — [чего следует избегать](/runes/effect#когда-не-использовать-effect) — вы можете читать состояние с помощью [untrack](https://svelte.dev/docs/svelte/svelte#untrack), чтобы избежать добавления его в качестве зависимости.
 
+### experimental_async_fork
+
+```
+Cannot use `fork(...)` unless the `experimental.async` compiler option is `true`
+```
+
 ### flush_sync_in_effect
 
 ```
@@ -144,6 +150,18 @@ Cannot use `flushSync` inside an effect
 Функция `flushSync()` может использоваться для синхронного выполнения всех ожидающих эффектов. Её нельзя вызывать во время текущего выполнения эффектов — то есть, её можно вызывать после изменения состояния, но _не_ внутри эффекта.
 
 Это ограничение применяется только при использовании опции `experimental.async`, которая будет включена по умолчанию в Svelte 6.
+
+### fork_discarded
+
+```
+Cannot commit a fork that was already committed or discarded
+```
+
+### fork_timing
+
+```
+Cannot create a fork inside an effect or when state changes are pending
+```
 
 ### get_abort_signal_outside_reaction
 
