--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -29,6 +29,10 @@ hero:
       link: /cli/introduction/overview
       icon: seti:shell
       variant: secondary
+    - text: MCP
+      link: /mcp/introduction/overview
+      icon: information
+      variant: secondary
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
