--- a/src/content/docs/reference/runtime-errors.mdx
+++ b/src/content/docs/reference/runtime-errors.mdx
@@ -154,7 +154,7 @@ Cannot use `flushSync` inside an effect
 ### fork_discarded
 
 ```
-Cannot commit a fork that was already committed or discarded
+Cannot commit a fork that was already discarded
 ```
 
 ### fork_timing
