--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -38,25 +38,25 @@ hero:
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
-  <Card title="$state" icon="pencil">
+  <Card href="/runes/state>$state" title="<a href=/runes/state>$state</a>" icon="pencil">
     Управляй состоянием
   </Card>
-  <Card title="$derived" icon="add-document">
+  <Card title="<a href=/runes/derived>$derived</a>" icon="add-document">
     Преобразуй данные
   </Card>
-  <Card title="$effect" icon="setting">
+  <Card title="<a href=/runes/effect>$effect</a>" icon="setting">
     Реагируй на изменения
   </Card>
-  <Card title="$props" icon="seti:json">
+  <Card title="<a href=/runes/props>$props</a>" icon="seti:json">
     Объявляй пропсы
   </Card>
-  <Card title="$bindable" icon="comment">
+  <Card title="<a href=/runes/bindable>$bindable</a>" icon="comment">
     Привязывай пропсы
   </Card>
-  <Card title="$inspect" icon="document">
+  <Card title="<a href=/runes/inspect>$inspect</a>" icon="document">
     Отслеживай изменения
   </Card>
-  <Card title="$host" icon="up-caret">
+  <Card title="<a href=/runes/host>$host</a>" icon="up-caret">
     Обращайся к родителю
   </Card>
 </CardGrid>
