--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -38,7 +38,7 @@ hero:
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
-  <Card href="/runes/state>$state" title="<a href=/runes/state>$state</a>" icon="pencil">
+  <Card title="<a href=/runes/state>$state</a>" icon="pencil">
     Управляй состоянием
   </Card>
   <Card title="<a href=/runes/derived>$derived</a>" icon="add-document">
