--- a/src/content/docs/introduction/getting-started.mdx
+++ b/src/content/docs/introduction/getting-started.mdx
@@ -48,9 +48,9 @@ Vite часто используется в автономном режиме д
 
 ## Инструменты для редакторов
 
-Команда Svelte поддерживает [расширение для VS Code](https://marketplace.visualstudio.com/items?itemName=svelte.svelte-vscode), а также существуют интеграции с различными другими [редакторами](https://sveltesociety.dev/resources#editor-support) и инструментами.
+Команда Svelte поддерживает [расширение для VS Code](https://marketplace.visualstudio.com/items?itemName=svelte.svelte-vscode), а также существуют интеграции с различными другими [редакторами](https://sveltesociety.dev/collection/editor-support-c85c080efc292a34) и инструментами.
 
-Вы можете проверять свой код из командной строки, используя [sv check](https://github.com/sveltejs/cli).
+Вы можете проверять свой код из командной строки, используя [`sv check`](https://github.com/sveltejs/cli).
 
 ## Получение помощи
 
